Adjusted textbox size

--- a/NextItem/Base.lproj/Main.storyboard
+++ b/NextItem/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -24,20 +24,24 @@
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="e6M-pc-tgD">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <accessibility key="accessibilityConfiguration">
+                                    <accessibilityTraits key="traits" notEnabled="YES"/>
+                                </accessibility>
                             </imageView>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="320" translatesAutoresizingMaskIntoConstraints="NO" id="2SO-jR-AXq" userLabel="Stack View_Primary">
-                                <rect key="frame" x="16" y="40" width="288" height="528"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="200" translatesAutoresizingMaskIntoConstraints="NO" id="2SO-jR-AXq" userLabel="Stack View_Primary" propertyAccessControl="none">
+                                <rect key="frame" x="16" y="40" width="288" height="508"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="top" reversesTitleShadowWhenHighlighted="YES" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hyf-m3-m1w">
-                                        <rect key="frame" x="0.0" y="0.0" width="288" height="43"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="288" height="39"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                         <state key="normal" image="NextItem1"/>
                                         <connections>
                                             <action selector="NextItemControl:" destination="BYZ-38-t0r" eventType="touchUpInside" id="NvV-dm-cDY"/>
                                         </connections>
                                     </button>
-                                    <textView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" text="Don't give into the dark side. Do something! " textAlignment="center" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="UOb-aC-Y2n" userLabel="TextViewItem">
-                                        <rect key="frame" x="0.0" y="363" width="288" height="165"/>
+                                    <textView clipsSubviews="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" textAlignment="center" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="UOb-aC-Y2n" userLabel="TextViewItem" propertyAccessControl="none">
+                                        <rect key="frame" x="0.0" y="239" width="288" height="269"/>
+                                        <string key="text">1Don't give into the dark side. Do something! 2Don't give into the dark side. Do something! 3Don't give into the dark side. Do something! 4Don't give into the dark side. Do something!5 Don't give into the dark side. Do something!</string>
                                         <color key="textColor" red="0.69999999999999996" green="0.20000000000000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -46,9 +50,12 @@
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <accessibility key="accessibilityConfiguration">
+                            <accessibilityTraits key="traits" adjustable="YES"/>
+                            <bool key="isElement" value="YES"/>
+                        </accessibility>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="e6M-pc-tgD" secondAttribute="trailing" id="5Vu-kp-fOL"/>
-                            <constraint firstAttribute="bottomMargin" secondItem="2SO-jR-AXq" secondAttribute="bottom" id="DrF-SQ-utz"/>
                             <constraint firstItem="2SO-jR-AXq" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="KXY-Ym-gqG"/>
                             <constraint firstItem="2SO-jR-AXq" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="40" id="MMH-iN-n5d"/>
                             <constraint firstItem="e6M-pc-tgD" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="Myf-58-LJ9"/>
@@ -58,6 +65,7 @@
                             <constraint firstAttribute="trailing" secondItem="e6M-pc-tgD" secondAttribute="trailing" id="aBe-MB-6Vz"/>
                             <constraint firstItem="e6M-pc-tgD" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="clt-ta-Fhb"/>
                             <constraint firstItem="e6M-pc-tgD" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="dGc-Or-KUA"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="2SO-jR-AXq" secondAttribute="bottom" constant="20" id="kKM-zU-Ax4"/>
                         </constraints>
                     </view>
                     <connections>
