--- a/NextItem/Base.lproj/Main.storyboard
+++ b/NextItem/Base.lproj/Main.storyboard
@@ -1,16 +1,16 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1611" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="acE-lX-Phz">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--NextItem-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="NextItem" customModuleProvider="target" sceneMemberID="viewController">
@@ -29,10 +29,10 @@
                                 </accessibility>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="200" translatesAutoresizingMaskIntoConstraints="NO" id="2SO-jR-AXq" userLabel="Stack View_Primary" propertyAccessControl="none">
-                                <rect key="frame" x="16" y="40" width="288" height="508"/>
+                                <rect key="frame" x="16" y="104" width="288" height="444"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="top" reversesTitleShadowWhenHighlighted="YES" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hyf-m3-m1w">
-                                        <rect key="frame" x="0.0" y="0.0" width="288" height="70"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="288" height="61"/>
                                         <fontDescription key="fontDescription" name="AmericanTypewriter-Bold" family="American Typewriter" pointSize="24"/>
                                         <state key="normal" title="NextItem...">
                                             <color key="titleColor" red="0.45489044099999998" green="0.26595215529999999" blue="0.1158351249" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -42,8 +42,8 @@
                                             <action selector="NextItemControl:" destination="BYZ-38-t0r" eventType="touchUpInside" id="NvV-dm-cDY"/>
                                         </connections>
                                     </button>
-                                    <textView clipsSubviews="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" text="Don't give into the dark side. Do something!" textAlignment="center" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="UOb-aC-Y2n" userLabel="TextViewItem" propertyAccessControl="none">
-                                        <rect key="frame" x="0.0" y="270" width="288" height="238"/>
+                                    <textView clipsSubviews="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" text="Don't give into the dark side. Do something!" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="UOb-aC-Y2n" userLabel="TextViewItem" propertyAccessControl="none">
+                                        <rect key="frame" x="0.0" y="261" width="288" height="183"/>
                                         <color key="textColor" red="0.69999999999999996" green="0.20000000000000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -59,24 +59,81 @@
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="e6M-pc-tgD" secondAttribute="trailing" id="5Vu-kp-fOL"/>
                             <constraint firstItem="2SO-jR-AXq" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="KXY-Ym-gqG"/>
-                            <constraint firstItem="2SO-jR-AXq" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="40" id="MMH-iN-n5d"/>
                             <constraint firstItem="e6M-pc-tgD" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="Myf-58-LJ9"/>
                             <constraint firstAttribute="bottom" secondItem="e6M-pc-tgD" secondAttribute="bottom" id="QLy-PM-Y0Q"/>
                             <constraint firstItem="2SO-jR-AXq" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="UGt-Y9-SOw"/>
                             <constraint firstItem="e6M-pc-tgD" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="VOW-gM-1Dz"/>
                             <constraint firstAttribute="trailing" secondItem="e6M-pc-tgD" secondAttribute="trailing" id="aBe-MB-6Vz"/>
+                            <constraint firstItem="2SO-jR-AXq" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="40" id="bYs-q8-Qef"/>
                             <constraint firstItem="e6M-pc-tgD" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="clt-ta-Fhb"/>
                             <constraint firstItem="e6M-pc-tgD" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="dGc-Or-KUA"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="2SO-jR-AXq" secondAttribute="bottom" constant="20" id="kKM-zU-Ax4"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="NextItem" id="Ps6-BV-glj">
+                        <barButtonItem key="rightBarButtonItem" systemItem="edit" id="vJC-vd-aCO">
+                            <connections>
+                                <segue destination="gtM-E1-Nid" kind="show" id="Apt-gy-5V2"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="TextViewItem" destination="UOb-aC-Y2n" id="k0f-Jb-yis"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="31.875" y="40.140845070422536"/>
+            <point key="canvasLocation" x="-928" y="-10"/>
+        </scene>
+        <!--Edit Items-->
+        <scene sceneID="467-wz-TCD">
+            <objects>
+                <tableViewController id="gtM-E1-Nid" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="hey-qR-xAz">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="pnU-Oy-H4I">
+                                <rect key="frame" x="0.0" y="28" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="pnU-Oy-H4I" id="Br6-cp-6h0">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="gtM-E1-Nid" id="tob-Jq-rrk"/>
+                            <outlet property="delegate" destination="gtM-E1-Nid" id="LzI-vp-nhG"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Edit Items" id="VuP-1X-F26">
+                        <barButtonItem key="backBarButtonItem" title="back" id="py6-h1-fNk"/>
+                    </navigationItem>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1qu-ip-NUt" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-60" y="-11"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="9Ff-u3-lT5">
+            <objects>
+                <navigationController id="acE-lX-Phz" sceneMemberID="viewController">
+                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="pCi-xj-Lvq">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="CQ5-9D-zlY"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ObI-Em-xdE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1781" y="-11"/>
         </scene>
     </scenes>
     <resources>
