Add a subclass of UITableViewController to handle table of items
- We add the UITableViewController in Interface Builder and then set its
  class to our custom subclass

- It is configured at segue with a reference to the ItemArray object

- It conforms to the UITableViewSource protocol which tells the table
  view how many items (and what they are) are in the ItemArray data
property

--- a/NextItem/Base.lproj/Main.storyboard
+++ b/NextItem/Base.lproj/Main.storyboard
@@ -88,18 +88,27 @@
         <!--Edit Items-->
         <scene sceneID="467-wz-TCD">
             <objects>
-                <tableViewController id="gtM-E1-Nid" sceneMemberID="viewController">
+                <tableViewController id="gtM-E1-Nid" customClass="EditListTableController" customModule="NextItem" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="hey-qR-xAz">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="pnU-Oy-H4I">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="itemcell" textLabel="ZZD-Xg-m0s" style="IBUITableViewCellStyleDefault" id="pnU-Oy-H4I">
                                 <rect key="frame" x="0.0" y="28" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="pnU-Oy-H4I" id="Br6-cp-6h0">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="ZZD-Xg-m0s">
+                                            <rect key="frame" x="15" y="0.0" width="290" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
                                 </tableViewCellContentView>
                             </tableViewCell>
                         </prototypes>
@@ -114,7 +123,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1qu-ip-NUt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-60" y="-11"/>
+            <point key="canvasLocation" x="-60" y="-11.619718309859156"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="9Ff-u3-lT5">
