--- a/NextItem/Base.lproj/Main.storyboard
+++ b/NextItem/Base.lproj/Main.storyboard
@@ -1,15 +1,60 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1611" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="VPX-h8-apG">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Root View Controller-->
+        <scene sceneID="fje-kU-buc">
+            <objects>
+                <tableViewController id="cLJ-iB-HFR" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="Koe-sT-NLq">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="Rhp-Gw-W8a">
+                                <rect key="frame" x="0.0" y="28" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Rhp-Gw-W8a" id="VZ6-1d-Gne">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="cLJ-iB-HFR" id="uef-tC-67y"/>
+                            <outlet property="delegate" destination="cLJ-iB-HFR" id="YFB-ic-QPw"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Root View Controller" id="RAO-uN-bR9"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Bmm-C9-MNZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="186" y="-208"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="ww6-kj-VTw">
+            <objects>
+                <navigationController id="VPX-h8-apG" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="jRi-88-efA">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="m1y-Sv-7xr"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ydV-jb-RfV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1459" y="-208"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -29,10 +74,10 @@
                                 </accessibility>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="200" translatesAutoresizingMaskIntoConstraints="NO" id="2SO-jR-AXq" userLabel="Stack View_Primary" propertyAccessControl="none">
-                                <rect key="frame" x="16" y="40" width="288" height="508"/>
+                                <rect key="frame" x="16" y="104" width="288" height="444"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="top" reversesTitleShadowWhenHighlighted="YES" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hyf-m3-m1w">
-                                        <rect key="frame" x="0.0" y="0.0" width="288" height="70"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="288" height="61"/>
                                         <fontDescription key="fontDescription" name="AmericanTypewriter-Bold" family="American Typewriter" pointSize="24"/>
                                         <state key="normal" title="NextItem...">
                                             <color key="titleColor" red="0.45489044099999998" green="0.26595215529999999" blue="0.1158351249" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -42,8 +87,8 @@
                                             <action selector="NextItemControl:" destination="BYZ-38-t0r" eventType="touchUpInside" id="NvV-dm-cDY"/>
                                         </connections>
                                     </button>
-                                    <textView clipsSubviews="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" text="Don't give into the dark side. Do something!" textAlignment="center" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="UOb-aC-Y2n" userLabel="TextViewItem" propertyAccessControl="none">
-                                        <rect key="frame" x="0.0" y="270" width="288" height="238"/>
+                                    <textView clipsSubviews="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" text="Don't give into the dark side. Do something!" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="UOb-aC-Y2n" userLabel="TextViewItem" propertyAccessControl="none">
+                                        <rect key="frame" x="0.0" y="261" width="288" height="183"/>
                                         <color key="textColor" red="0.69999999999999996" green="0.20000000000000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -59,24 +104,31 @@
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="e6M-pc-tgD" secondAttribute="trailing" id="5Vu-kp-fOL"/>
                             <constraint firstItem="2SO-jR-AXq" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="KXY-Ym-gqG"/>
-                            <constraint firstItem="2SO-jR-AXq" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="40" id="MMH-iN-n5d"/>
                             <constraint firstItem="e6M-pc-tgD" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="Myf-58-LJ9"/>
                             <constraint firstAttribute="bottom" secondItem="e6M-pc-tgD" secondAttribute="bottom" id="QLy-PM-Y0Q"/>
                             <constraint firstItem="2SO-jR-AXq" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="UGt-Y9-SOw"/>
                             <constraint firstItem="e6M-pc-tgD" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="VOW-gM-1Dz"/>
+                            <constraint firstItem="2SO-jR-AXq" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="40" id="VVZ-4i-rpE"/>
                             <constraint firstAttribute="trailing" secondItem="e6M-pc-tgD" secondAttribute="trailing" id="aBe-MB-6Vz"/>
                             <constraint firstItem="e6M-pc-tgD" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="clt-ta-Fhb"/>
                             <constraint firstItem="e6M-pc-tgD" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="dGc-Or-KUA"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="2SO-jR-AXq" secondAttribute="bottom" constant="20" id="kKM-zU-Ax4"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="zrO-Mn-NQq">
+                        <barButtonItem key="rightBarButtonItem" title="Customize" id="Qeb-0U-L9t">
+                            <connections>
+                                <segue destination="cLJ-iB-HFR" kind="show" id="Wih-7s-NKs"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="TextViewItem" destination="UOb-aC-Y2n" id="k0f-Jb-yis"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="31.875" y="40.140845070422536"/>
+            <point key="canvasLocation" x="-623" y="-208"/>
         </scene>
     </scenes>
     <resources>
